REST service factory API

--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -20,6 +20,11 @@
     <script type="application/javascript"  src="vendor/angular-ui/lib/angular-ui-router.min.js"></script>
 
     <script type="application/javascript"  src="app/foundation/Application.js"></script>
+
+    <script type="application/javascript"  src="app/lib/service/Hal.js"></script>
+    <script type="application/javascript"  src="app/lib/service/Model.js"></script>
+    <script type="application/javascript"  src="app/lib/service/RestServiceFactory.js"></script>
+
     <script type="application/javascript"  src="app/view/dashboard/Index.controller.js"></script>
 </head>
 
