REST service API+config

--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -25,6 +25,8 @@
     <script type="application/javascript"  src="app/lib/service/Model.js"></script>
     <script type="application/javascript"  src="app/lib/service/RestServiceFactory.js"></script>
 
+    <script type="application/javascript"  src="app/lib/model/Node.js"></script>
+
     <script type="application/javascript"  src="app/view/dashboard/Index.controller.js"></script>
 </head>
 
