--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -21,10 +21,8 @@
 
     <script type="application/javascript"  src="app/foundation/Application.js"></script>
 
-    <script type="application/javascript"  src="app/lib/service/Hal.js"></script>
-    <script type="application/javascript"  src="app/lib/service/Model.js"></script>
     <script type="application/javascript"  src="app/lib/service/RestServiceFactory.js"></script>
-
+    <script type="application/javascript"  src="app/lib/model/Hal.js"></script>
     <script type="application/javascript"  src="app/lib/model/Node.js"></script>
 
     <script type="application/javascript"  src="app/view/dashboard/Index.controller.js"></script>
