--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -21,6 +21,8 @@
 
     <script type="application/javascript"  src="app/foundation/Application.js"></script>
 
+    <script type="application/javascript"  src="app/lib/foundation/PollingService.js"></script>
+
     <script type="application/javascript"  src="app/lib/service/RestService.js"></script>
     <script type="application/javascript"  src="app/lib/model/Hal.js"></script>
     <script type="application/javascript"  src="app/lib/representation/Node.js"></script>
