Switching on/off/scheduled

--- a/web/public/app/view/dashboard/Index.html
+++ b/web/public/app/view/dashboard/Index.html
@@ -22,7 +22,7 @@
                         <span data-ng-bind="switch.description"></span>
                     </div>
                     <div style="display: table-cell;">
-                        <span class="fa-stack fa-lg" data-ng-click="onSwitchClicked(switch._links.$setScheduled)" data-ng-show="rules.container.isScheduled(switch)">
+                        <span class="fa-stack fa-lg" data-ng-click="onSwitchClicked(switch._links.$setUnscheduled)" data-ng-show="rules.container.isScheduled(switch)">
                             <i class="fa fa-circle fa-stack-2x" style="color: skyblue;"></i>
                             <i class="fa fa-clock-o fa-stack-1x fa-inverse" style="color: #414141; font-size: 1.2em"></i>
                         </span>
